--- a/src/hotelgui/roomprices.form
+++ b/src/hotelgui/roomprices.form
@@ -159,6 +159,9 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Roboto" size="36" style="1"/>
         </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="8d" green="75" red="5f" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Price Info"/>
       </Properties>
     </Component>
@@ -194,6 +197,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="8b" green="98" red="72" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Go Back"/>
       </Properties>
       <Events>
